Finished most of the database-api interaction (dynamic product display, local data storage, cart up and display cart value)

--- a/index.html
+++ b/index.html
@@ -49,104 +49,7 @@
         <div class="title">
           <h1>Escolha um dos nossos maravilhosos sabores!</h1>
         </div>
-        <div class="products-showcase-list">
-          <div class="product-showcase">
-            <div class="image">
-              <img
-                src="media/images/product-images/Trufa_coco.png"
-                alt=""
-                class="product-image"
-              />
-            </div>
-            <div class="product-showcase-text">
-              <h2 class="product-showcase-name">Trufa de etc</h2>
-              <div class="prices">
-                <p class="showcase-full-price">R$ 1,23</p>
-                <p class="showcase-discount-price">R$ 1,00</p>
-              </div>
-            </div>
-          </div>
-          <div class="product-showcase">
-            <div class="image">
-              <img
-                src="media/images/product-images/Trufa_coco.png"
-                alt=""
-                class="product-image"
-              />
-            </div>
-            <div class="product-showcase-text">
-              <h2 class="product-showcase-name">Trufa de etc</h2>
-              <div class="prices">
-                <p class="showcase-full-price">R$ 1,23</p>
-                <p class="showcase-discount-price">R$ 1,00</p>
-              </div>
-            </div>
-          </div>
-          <div class="product-showcase">
-            <div class="image">
-              <img
-                src="media/images/product-images/Trufa_coco.png"
-                alt=""
-                class="product-image"
-              />
-            </div>
-            <div class="product-showcase-text">
-              <h2 class="product-showcase-name">Trufa de etc</h2>
-              <div class="prices">
-                <p class="showcase-full-price">R$ 1,23</p>
-                <p class="showcase-discount-price">R$ 1,00</p>
-              </div>
-            </div>
-          </div>
-          <div class="product-showcase">
-            <div class="image">
-              <img
-                src="media/images/product-images/Trufa_coco.png"
-                alt=""
-                class="product-image"
-              />
-            </div>
-            <div class="product-showcase-text">
-              <h2 class="product-showcase-name">Trufa de etc</h2>
-              <div class="prices">
-                <p class="showcase-full-price">R$ 1,23</p>
-                <p class="showcase-discount-price">R$ 1,00</p>
-              </div>
-            </div>
-          </div>
-          <div class="product-showcase">
-            <div class="image">
-              <img
-                src="media/images/product-images/Trufa_coco.png"
-                alt=""
-                class="product-image"
-              />
-            </div>
-            <div class="product-showcase-text">
-              <h2 class="product-showcase-name">Trufa de etc</h2>
-              <div class="prices">
-                <p class="showcase-full-price">R$ 1,23</p>
-                <p class="showcase-discount-price">R$ 1,00</p>
-              </div>
-            </div>
-          </div>
-          <div class="product-showcase">
-            <div class="image">
-              <img
-                src="media/images/product-images/Trufa_coco.png"
-                alt=""
-                class="product-image"
-              />
-            </div>
-            <div class="product-showcase-text">
-              <h2 class="product-showcase-name">Trufa de etc</h2>
-              <div class="prices">
-                <p class="showcase-full-price">R$ 1,23</p>
-                <p class="showcase-discount-price">R$ 1,00</p>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="products-showcase-list"></div>
       </div>
       <div class="shopping-cart">
         <div class="title">
@@ -172,7 +75,7 @@
         <hr class="separator" />
         <div class="total-price">
           <h1>Total</h1>
-          <h1 data-total>R$ 00,00</h1>
+          <h1>R$ <span data-total> 0.00</span></h1>
         </div>
         <hr class="separator" />
         <div class="finish-button">
