Finished shopping cart functionalities (adding, removing items) and bugfix

--- a/index.html
+++ b/index.html
@@ -56,22 +56,7 @@
           <h1>Meu carrinho</h1>
         </div>
         <hr class="separator" />
-        <div class="products-list">
-          <div class="product">
-            <div class="image">
-              <img
-                src="media/images/product-images/Trufa_coco.png"
-                alt=""
-                class="product-image"
-              />
-            </div>
-            <div class="product-text">
-              <h2 class="product-name">Trufa de etc</h2>
-              <p class="whole-price">R$ 1,23</p>
-              <p class="discount-price">R$ 1,00</p>
-            </div>
-          </div>
-        </div>
+        <div class="products-list"></div>
         <hr class="separator" />
         <div class="total-price">
           <h1>Total</h1>
