Fixed database issues

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <main class="container">
       <nav class="candy-store-navbar">
-        <h1>My candy store</h1>
+        <h1>Minha loja de doces</h1>
         <div class="shopping-cart-icon">
           <span class="shopping-button">
             <i class="fas fa-2x fa-shopping-cart"></i>
@@ -26,7 +26,7 @@
       </nav>
       <header class="hero">
         <div class="hero-bg">
-          <h1>Welcome to my candy store!</h1>
+          <h1>Bem vindos a minha loja de doces!</h1>
         </div>
         <div class="lower-hero-bar">
           <ul>
