--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       </nav>
       <header class="hero">
         <div class="hero-bg">
+          <div class="hero-overlay"></div>
+          <video src="media/videos/hero_video.mp4" autoplay muted loop></video>
           <h1>Bem vindos a minha loja de doces!</h1>
         </div>
         <div class="lower-hero-bar">
@@ -55,12 +57,15 @@
         <div class="title">
           <h1>Meu carrinho</h1>
         </div>
-        <hr class="separator" />
+        <hr class="separator invisible-separator" />
         <div class="products-list"></div>
         <hr class="separator" />
         <div class="total-price">
           <h1>Total</h1>
           <h1>R$ <span data-total> 0.00</span></h1>
+        </div>
+        <div class="free-shipping invisible">
+          <p>Parabéns, sua compra tem frete grátis!</p>
         </div>
         <hr class="separator" />
         <div class="finish-button">
